color and links

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -26,5 +26,5 @@ $feature-image-text-color: #fff;
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #E6E6E6;
+$header-desc-background-color: #3A352F;
 $header-desc-text-color: #FFF;
